# MathTrainerServer

./: CMakeLists.txt  CMakePresets.json
MathTrainerServer/: .CMakeLists.txt.swp  CMakeLists.txt
MathTrainerServer/src/: Asio.h  Game.cpp  Game.h  GameManager.h  MathTrainerServer.cpp  Player.cpp  Player.h  Problem.h  ProblemGenerator.cpp  ProblemGenerator.h
